--- a/Resources/translations/messages.en.yml
+++ b/Resources/translations/messages.en.yml
@@ -1,6 +1,7 @@
-allies_oro_bugsnag:
-    system_configuration:
-        groups:
-            allies_oro_bugsnag.title:       Bugsnag
-        fields:
-            reporting_level.label:          Reporting Level
+allies:
+    oro_bugsnag:
+        system_configuration:
+            groups:
+                allies_oro_bugsnag.title:       Bugsnag
+            fields:
+                reporting_level.label:          Reporting Level
